[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "release-$major.$minor.$patch$prerelease"
version = "1.4.1"
version_files = [
    "pyproject.toml:version",
    "setup.py"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pytest",
    "commitizen"
]
build-backend = "setuptools.build_meta"